# RestCalc

./: .gitignore  Ресторанный калькулятор 3.0.sln
.github/workflows/: actions.yml  blank.yml
Ресторанный калькулятор 3.0/: CMakeLists.txt  Calc.cpp  functions.cmake  Ресторанный калькулятор 3.0.vcxproj  Ресторанный калькулятор 3.0.vcxproj.filters
